# shibe-bot

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  build.rs  settings.json
.github/workflows/: rust.yml
src/: definitions.rs  main.rs  schema.rs  settings.rs
src/command/: devel.rs  fun.rs  mod.rs  util.rs
