[package]
name = "shibe-bot"
description = "A Discord bot written in Rust, using Poise."
license = "MIT"
readme = "README.md"
version = "0.4.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
vergen = { version = "9.0.2", features = ["build", "cargo", "rustc"] }
anyhow = "1.0.95"

[dependencies]
dotenvy = "0.15.0"
log = "0.4.22"
poise = "0.6.1"
pretty_env_logger = "0.5.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
roux = "2.2.13"
structstruck = "0.4.1"
