[package]
name = "shibe-bot"
description = "A Discord bot written in Rust, using Poise."
license = "MIT"
readme = "README.md"
version = "1.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc"] }
anyhow = "1.0.97"

[dependencies]
dotenvy = "0.15.0"
log = "0.4.25"
poise = "0.6.1"
pretty_env_logger = "0.5.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
roux = "2.2.13"
structstruck = "0.4.1"
reqwest = { version = "0.12.12", features = ["json"] }
octocrab = "0.43.0"
tempfile = "3.19.0"
self-replace = "1.5.0"
zip = "2.2.2"
nix = { version = "0.29.0", features = ["process"] }
minreq = { version = "2.13.3", features = ["https"] }
